fixed mobile nav issue. tel: is now visible on android devices

--- a/css/style3.css
+++ b/css/style3.css
@@ -12,7 +12,7 @@
 #contactInfo {
 	margin: 0;
 	margin-top: 50px;
-	margin-top: 119px;
+	/*margin-top: 119px;*/
 	padding: 0;
 	display: block;
 	height: 100%;
